--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dependencies": {
         "stylus": "^0.54.5",
         "vue": "^2.5.2",
-        "vue-router": "^0.7.13"
+        "vue-router": "^2.2.0",
+        "vue-resource": "^1.0.1"
     },
     "devDependencies": {
         "autoprefixer": "^7.1.2",
