--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
         "build": "node build/build.js"
     },
     "dependencies": {
-        "better-scroll": "^1.12.4",
+        "axios": "^0.18.0",
+        "better-scroll": "^1.13.4",
         "stylus": "^0.54.5",
-        "vue": "^2.5.17",
-        "vue-resource": "^1.0.1",
-        "vue-router": "^2.2.0"
+        "vue": "^2.5.22",
+        "vue-resource": "^1.5.1",
+        "vue-router": "^2.8.1"
     },
     "devDependencies": {
         "autoprefixer": "^7.1.2",
